duniverse/menhirLib.20200211/test/static/bad/constant-arity-in-multiple-def-1.mly
%start<int> a
%%

a: {}

%public b(X): {}
