duniverse/menhirLib.20200211/test/static/bad/constant-arity-in-multiple-def-1.exp
File "constant-arity-in-multiple-def-2.mly", line 2, characters 8-9:
File "constant-arity-in-multiple-def-1.mly", line 6, characters 8-9:
Error: the symbol b is defined with arities 2 and 1.
